--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
+    "framer-motion": "^10.12.21",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.2",
     "next": "13.4.9",
