--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "share-promts",
+  "name": "hr-management",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -19,6 +19,7 @@
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "tailwindcss": "3.3.2"
   }
 }
