--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "framer-motion": "^10.12.21",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.2",
-    "next": "13.4.9",
+    "next": "^13.4.12",
     "next-auth": "^4.22.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
