--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^7.3.2",
     "next": "^13.4.12",
     "next-auth": "^4.22.3",
+    "pino": "^8.15.0",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
