--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.21",
+    "typescript": "5.2.2"
   }
 }
