--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.3.3",
     "framer-motion": "^10.12.21",
     "mongodb": "^5.7.0",
@@ -25,6 +26,7 @@
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.4",
     "@types/react": "18.2.21",
     "eslint": "^8.50.0",
     "eslint-plugin-react": "^7.33.2",
