--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
-    "bcryptjs": "^5.1.0",
+    "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.3.3",
     "framer-motion": "^10.12.21",
