--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.3.3",
+    "dayjs": "^1.11.10",
     "framer-motion": "^10.12.21",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.2",
