--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "framer-motion": "^10.12.21",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.2",
-    "next": "13.4.12",
+    "next": "^13.5.4",
     "next-auth": "^4.22.3",
     "pino": "^8.15.0",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-webcam": "^7.1.1",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
