--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.3.3",
+    "cloudinary": "^1.41.3",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.12.21",
     "googleapis": "^126.0.1",
