--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.3.3",
+    "class-variance-authority": "^0.7.0",
     "cloudinary": "^1.41.3",
+    "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.12.21",
     "googleapis": "^126.0.1",
+    "lucide-react": "^0.321.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.2",
     "next": "^13.5.4",
@@ -27,7 +30,9 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-webcam": "^7.1.1",
-    "tailwindcss": "3.3.2"
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.4",
